[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["dvmn-tasks <devman-tasks@yandex.ru>"]
description = ""
name = "wine"
version = "0.1.0"
[tool.poetry.dependencies]
jinja2 = "^2.11"
python = "^3.7"
pandas = "^1.0"
xlrd = "^1.2"
[tool.poetry.dev-dependencies]
